force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank__c/fields/Loopio__Comparison_Type__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Comparison_Type__c</fullName>
    <description>Stores Value or Range (for calculating score)</description>
    <label>Comparison Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loopio__Data_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>