force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank__c/fields/Loopio__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Data_Type__c</fullName>
    <description>Data type of the answer.</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>