force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank__c/fields/Loopio__Go_No_Go_Section__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Go_No_Go_Section__c</fullName>
    <description>Master-Detail relation with Go/No-Go Section.</description>
    <label>Go/No-Go Section</label>
    <referenceTo>Loopio__Go_No_Go_Section__c</referenceTo>
    <relationshipName>Go_No_Go_Question_Banks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>