force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank__c/fields/Loopio__Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Question_Label__c</fullName>
    <description>Stores actual question which will be displayed.</description>
    <label>Question Label</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>