force-app/main/default/objects/Loopio__Go_No_Go_Question_Bank__c/listViews/Loopio__All.listView-meta.xml
<ListView>
    <fullName>Loopio__All</fullName>
    <columns>NAME</columns>
    <columns>Loopio__Question_Label__c</columns>
    <columns>Loopio__Question_Sequence__c</columns>
    <columns>Loopio__Data_Type__c</columns>
    <columns>Loopio__Make_Required__c</columns>
    <columns>Loopio__Go_No_Go_Section__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>